# pcsuite-rs

./: .gitignore  Cargo.toml  README.md  pcsuite.example.json
crates/pcsuite-cli/: Cargo.toml
crates/pcsuite-cli/src/: main.rs
crates/pcsuite-core/: Cargo.toml
crates/pcsuite-core/src/: adb.rs  clipboard.rs  config.rs  connect.rs  device.rs  lib.rs  mdfs.rs  notify.rs  pair.rs  screen.rs  session.rs  usb.rs  vdfs.rs  verify.rs  wsconn.rs
crates/pcsuite-crypto/: Cargo.toml
crates/pcsuite-crypto/src/: lib.rs
crates/pcsuite-ffi/: Cargo.toml  SWIFT_INTEGRATION.md  build-macos.sh  build.rs
crates/pcsuite-ffi/src/: clipboard_mac.rs  lib.rs
crates/pcsuite-net/: Cargo.toml
crates/pcsuite-net/src/: lib.rs  ssdp.rs  tcp.rs  tls.rs  ws.rs
crates/pcsuite-proto/: Cargo.toml
crates/pcsuite-proto/src/: clip.rs  connect.rs  input.rs  lib.rs  notify.rs  payload1.rs  ruying.rs  screen.rs  vdfs.rs  verify.rs
