[workspace]
resolver = "2"
members = [
    "crates/pcsuite-crypto",
    "crates/pcsuite-proto",
    "crates/pcsuite-net",
    "crates/pcsuite-core",
    "crates/pcsuite-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "pcsuite-rs"

# Shared dependency versions, pinned to the RustCrypto 0.x / tokio ecosystems.
[workspace.dependencies]
# crypto (RustCrypto, pure-Rust -> portable to win/linux with no OpenSSL dep)
sha2 = "0.10"
sha1 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
aes-gcm = "0.10"
# raw CTR mode for vdfs's no-auth GCM decryption (responses decrypt key+nonce only)
ctr = "0.9"
hex = "0.4"
# async / net (added in later milestones)
tokio = { version = "1", features = ["full"] }
# rustls with the pure-Rust `ring` provider (no cmake/aws-lc build deps -> easy win/linux)
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
socket2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
