[package]
name = "pcsuite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session orchestration: ConnectFlow registration, screen-mirror data plane (raw HEVC frame delivery), and shared config."

[dependencies]
pcsuite-crypto = { path = "../pcsuite-crypto" }
pcsuite-proto = { path = "../pcsuite-proto" }
pcsuite-net = { path = "../pcsuite-net" }

tokio.workspace = true
tokio-rustls.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace = true
rand.workspace = true
base64.workspace = true
serde_json.workspace = true
