[package]
name = "pcsuite-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Byte-exact reimplementation of the two crypto recipes used by the phone-suite protocol (ConnectFlow sign + relay/vdfs vgcm)."

[dependencies]
sha2.workspace = true
aes.workspace = true
cbc.workspace = true
aes-gcm.workspace = true
ctr.workspace = true
hex.workspace = true
