[package]
name = "pcsuite-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transport: SSDP discovery/presence, TLS (self-signed, no-verify), and a hand-rolled RFC6455 WebSocket client."

[dependencies]
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
socket2.workspace = true
base64.workspace = true
rand.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
