[package]
name = "pcsuite-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire formats: 10191 PAY_LOAD_1 framing, connect/device-info frames, 8904 ruying frames, screen control messages."

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
hex.workspace = true
